--- a/informative-table-fe/index.html
+++ b/informative-table-fe/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informative table</title>
+    <title>IW Info table</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/toastr.css" /> 
-    <link rel="stylesheet" href="css/login.css" /> 
+    <link rel="stylesheet" href="css/login.css" />
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/axios.min.js"></script>
@@ -15,27 +15,27 @@
     <script src="js/login.js"></script>
 </head>
 <body>
-  <div id="particles-js"></div>
-  <div class="container">
-    <div class="login-form">
-      <div class="login-form-wrap">
-        <!-- <h2>Login</h2> -->
-        <img class="img img-fluid iw-logo" src="assets/images/iw-logo-long.png">
-        <form class="mt-5" onsubmit="event.preventDefault(); return false;">
-          <div class="user-box">
-            <input type="text" id="email" name="email" required
-            oninvalid="this.setCustomValidity('Email is required.')"
-            oninput="this.setCustomValidity('')">
-            <label for="email">Email:</label>
-          </div>
-          <div class="user-box">
-            <input type="password" id="pwd" name="pswd" required
-            oninvalid="this.setCustomValidity('Password is required.')"
-            oninput="this.setCustomValidity('')">
-            <label for="pwd">Password:</label>
-          </div>
-          <button class="submit-btn mt-2" type="submit" class="btn btn-primary" onclick="login()">SUBMIT</button>
-        </form>
+  <div class="login-page">
+    <div class="container">
+      <div class="login-form">
+        <div class="login-form-wrap">
+          <img class="img img-fluid iw-logo" src="assets/images/iw-logo-long.png">
+          <form class="mt-5" onsubmit="event.preventDefault(); return false;">
+            <div class="user-box">
+              <input type="text" id="email" name="email" required
+              oninvalid="this.setCustomValidity('Email is required.')"
+              oninput="this.setCustomValidity('')">
+              <label for="email">Email:</label>
+            </div>
+            <div class="user-box">
+              <input type="password" id="pwd" name="pswd" required
+              oninvalid="this.setCustomValidity('Password is required.')"
+              oninput="this.setCustomValidity('')">
+              <label for="pwd">Password:</label>
+            </div>
+            <button class="submit-btn mt-2" type="submit" class="btn btn-primary" onclick="login()">LOGIN</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
